--- a/public/index.html
+++ b/public/index.html
@@ -30,10 +30,20 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- <script src="https://apis.google.com/js/api.js"></script>
+    <iframe
+      src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=Asia%2FKolkata&bgcolor=%23ffffff&src=eWFtaW5pcmVkZHlzYXZ2YUBnbWFpbC5jb20&src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&src=ZW4uaW5kaWFuI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%23039BE5&color=%2333B679&color=%230B8043"
+      style="border: solid 1px #777"
+      width="800"
+      height="600"
+      frameborder="0"
+      scrolling="no"
+    ></iframe> -->
     <title>Sepnoty</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
     <div id="root"></div>
 
     <!--
